        Reviewed by Darin Adler.

Make JavaScriptCore Chromium build under Windows (cmd only, cygwin almost works)
        https://bugs.webkit.org/show_bug.cgi?id=22347

        * JavaScriptCore.scons:
        * parser/Parser.cpp: Add using std::auto_ptr since we use auto_ptr

Canonical link: https://commits.webkit.org/30856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38647 268f45cc-cd09-0410-ab3c-d52691b4dbfc